WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
282432
[Navigation] Abort traversal navigations properly
https://bugs.webkit.org/show_bug.cgi?id=282432
Summary
[Navigation] Abort traversal navigations properly
Rob Buis
Reported
2024-11-01 05:03:58 PDT
Abort traversal navigations properly.
Attachments
Add attachment
proposed patch, testcase, etc.
Rob Buis
Comment 1
2024-11-01 06:06:03 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/36043
EWS
Comment 2
2024-11-04 09:27:50 PST
Committed
286094@main
(ffc766087d1a): <
https://commits.webkit.org/286094@main
> Reviewed commits have been landed. Closing PR #36043 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2024-11-04 09:28:16 PST
<
rdar://problem/139210446
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug