Source/WebCore/loader/FrameLoader.cpp
@@ -4431,7 +4431,8 @@ void FrameLoader::loadItem(HistoryItem& item, HistoryItem* fromItem, FrameLoadTy
     if (frame().document() && frame().document()->settings().navigationAPIEnabled() && fromItem && SecurityOrigin::create(item.url())->isSameOriginAs(SecurityOrigin::create(fromItem->url()))) {
         if (RefPtr domWindow = frame().document()->domWindow()) {
             if (RefPtr navigation = domWindow->protectedNavigation(); navigation->frame()) {
-                navigation->dispatchTraversalNavigateEvent(item);
+                if (navigation->dispatchTraversalNavigateEvent(item) == Navigation::DispatchResult::Aborted)
+                    return;
                 // In case the event detached the frame.
                 if (!navigation->frame())
                     return;
